debut de card-provider plus tout les relation de l'entity provider.

--- a/.env
+++ b/.env
@@ -36,5 +36,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://0eee509b3db2cf:6e00047c78da22@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+# MAILER_DSN=smtp://0eee509b3db2cf:6e00047c78da22@sandbox.smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+MAILER_DSN=null://null
 ###< symfony/mailer ###
