--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,10 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\UserAuthenticator
+            form_login:
+                login_path: app_login
+                check_path: app_login
+            entry_point: App\Security\UserAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
